--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@recallnet/chains": "^0.0.6",
+    "@recallnet/sdk": "^0.0.7",
     "ai": "^4.1.61",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
