--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.479.0",
+    "mem0ai": "^2.1.12",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
     "openai": "^4.87.3",
