--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "replicate": "^1.0.1",
     "simli-client": "^1.2.8",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
