--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-spring/three": "^9.7.5",
+    "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.1.1",
+    "@react-three/rapier": "^2.0.0",
     "@recallnet/chains": "^0.0.6",
     "@recallnet/sdk": "^0.0.7",
+    "@types/three": "^0.175.0",
     "ai": "^4.1.61",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
@@ -47,6 +52,7 @@
     "posthog-js": "^1.232.4",
     "posthog-node": "^4.10.1",
     "prisma": "^6.5.0",
+    "r3f-perf": "^7.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -55,6 +61,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.175.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
